fixes? not sure about last changes but pushing to pull from h2s monitor

--- a/ReactJS.en.tex
+++ b/ReactJS.en.tex
@@ -51,7 +51,7 @@ What is React.js? React is a JavaScript library for building user interfaces. It
 
 Here are some links and videos with more information:
 \begin{itemize}\itemsep1pt
-\item \href{https://youtu.be/N3AkSS5hXMA}{What is React?}
+\item \href{https://youtu.be/N3AkSS5hXMA}{What is React? (Watch this! It's a very useful introduction)}
 \item \href{https://brainhub.eu/blog/10-famous-apps-using-reactjs-nowadays/}{A list of some of the big companies using React}
 \item \href{https://medium.com/@hamzamahmood/advantages-of-developing-modern-web-apps-with-react-js-8504c571db71}{A general overview and advantages of using React}
 \end{itemize}
